# 3d-bpp

./: .editorconfig  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  baseline.ipynb  bpp.ipynb  cg.ipynb  dataset.ipynb  debug_main.py  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_order.csv
.devcontainer/: devcontainer.json
3dbpp/: __init__.py
3dbpp/src/: __init__.py  baseline.py  bins.py  column_generation.py  config.py  dashboard.py  dataset.py  main.py  maxrects.py  superitems.py  utils.py
assets/: flow.drawio
config/: __init__.py  debug_config.py
d3_bpp/: __init__.py  baseline.py  bins.py  column_generation.py  dashboard.py  dataset.py  layers.py  main.py  maxrects.py  superitems.py  utils.py
d3_bpp/config/: __init__.py  common.py  configuration.py  container.py  measures.md  pallet.py  rotation.py
d3_bpp/plot/: __init__.py  cuboid.py
d3_bpp/structure/: __init__.py  cuboid.py
data/: products.pkl  test_order.csv
init/: environment.yml  requirements.txt
slides/: package-lock.json  package.json  slides.md
src/: baseline.py  bins.py  cg.py  column_generation.py  config.py  dashboard.py  dataset.py  layers.py  main.py  maxrects.py  pack.py  plot.py  superitems.py  utils.py  warm_start.py
