[metadata]
name = 3dbpp
version = attr: 3dbpp.__version__
author = Alessio Falai, Leonardo Calbi
description = 3D Bin Packing Problem solver
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
url = https://github.com/Wadaboa/3d-bpp.git
keywords = 3d-bin-packing, layers, cp, mip, bin-packing, column-generation, or-tools, maxrects, 3d-bpp
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.10
packages = find:
include_package_data = True
install_requires =
    loguru>=0.6.0
    numpy>=1.23.3
    ortools>=9.4
    pandas>=1.5.0
    rectpack>=0.2.2
    typing-extensions>=4.3.0

[options.package_data]
3dbpp = py.typed

[options.extras_require]
dev =
    bandit>=1.7.4
    black>=22.8.0
    flake8-bugbear>=22.9.23
    flake8-docstrings>=1.6.0
    flake8>=5.0.4
    ipykernel>=6.16.0
    isort>=5.10.1
    jupyter>=1.0.0
    matplotlib>=3.6.0
    mypy>=0.981
    nb_black>=1.0.7
    pandas-stubs>=1.5.0
    perf_tool>=0.9.1
    plotly>=5.10.0
    pre-commit>=2.20.0
    pytest-cov>=4.0.0
    pytest-randomly>=3.12.0
    pytest>=7.1.2
    pyyaml>=6.0
    scikit-learn>=1.1.2
    scipy>=1.9.1
    seaborn>=0.12.0
    streamlit >= 1.13.0
    tabulate>=0.8.10
    tqdm>=4.64.1
    types-jsonschema>=4.7.0

[options.packages.find]
include = 3dbpp*

[flake8]
docstring-convention = google
exclude =
    .git,
    __pycache__,
    build
extend-ignore = E203, E265, E402, W503, D401, B024
per-file-ignores =
                **/__init__.py:F401
                tests/*.py:D100, D101, D102, D103, D104, D105, D106, D107
                tests/**/__init__.py:F401, D104
# See line-length in pyproject.toml.
# NOTE: black sometimes goes a bit over when only a parentesis or a comma is over the limit
max-line-length = 100

# code coverage configuration
# refer to https://coverage.readthedocs.io/en/latest/config.html
[coverage:run]
branch = true

[coverage:paths]
source = .

[coverage:report]
include =
    3dbpp/**

exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    if TYPE_CHECKING:
    ^\s*\.{3}

[coverage:html]
directory = coverage
