[metadata]
name = 3d-bpp
version = attr: d3_bpp.__version__
author = Alessio Falai, Leonardo Calbi
description = 3D Bin Packing Problem solver
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
url = https://github.com/Wadaboa/3d-bpp.git
keywords = 3d-bin-packing, layers, cp, mip, bin-packing, column-generation, or-tools, maxrects, 3d-bpp
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.10
packages = find:
include_package_data = True
install_requires =
    loguru>=0.7.0
    numpy>=1.24.2
    ortools>=9.4
    pandas>=1.5.0
    rectpack>=0.2.2
    typing-extensions>=4.5.0

[options.package_data]
d3_bpp = py.typed

[options.extras_require]
dev =
    bandit>=1.7.5
    black[jupyter]>=23.3.0
    flake8-bugbear>=23.3.23
    flake8-docstrings>=1.7.0
    flake8>=6.0.0
    isort>=5.12.0
    jupyter>=1.0.0
    matplotlib>=3.7.0
    mypy>=1.2.0
    pandas-stubs>=2.0.0
    perf_tool>=0.9.1
    plotly>=5.14.1
    pre-commit>=3.2.2
    pytest-cov>=4.0.0
    pytest-randomly>=3.12.0
    pytest>=7.3.1
    pyyaml>=6.0
    scikit-learn>=1.2.2
    scipy>=1.10.0
    seaborn>=0.12.0
    streamlit >= 1.21.0
    tqdm>=4.64.1
    types-jsonschema>=4.17.0

[options.packages.find]
include = d3_bpp*

[flake8]
docstring-convention = google
exclude =
    .git,
    __pycache__,
    build
extend-ignore = E203, E265, E402, W503, D401, B024
per-file-ignores =
                **/__init__.py:F401
                tests/*.py:D100, D101, D102, D103, D104, D105, D106, D107
                tests/**/__init__.py:F401, D104
# See line-length in pyproject.toml.
# NOTE: black sometimes goes a bit over when only a parentesis or a comma is over the limit
max-line-length = 100

# code coverage configuration
# refer to https://coverage.readthedocs.io/en/latest/config.html
[coverage:run]
branch = true

[coverage:paths]
source = .

[coverage:report]
include =
    d3_bpp/**

exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    if TYPE_CHECKING:
    ^\s*\.{3}

[coverage:html]
directory = coverage
